Fixed the navbar spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ section{
 
 /* Navbar Media Queries */
 
-@media (max-width: 1225px){
+@media (max-width: 1025px){
   .navbar-right {
     margin-right: -20px;
   }
@@ -129,12 +129,6 @@ section{
 @media (max-width: 800px){
   .navbar-right {
     margin-right: -23px;
-  }
-}
-
-@media (min-width: 768px){
-  .navbar-right {
-    margin-right: -40px;
   }
 }
 
